<resources>
    <string name="crop_save_button">Save</string>
    <string name="crop_image_description">Image</string>
    <string name="crop_photo_too_small">Your photo is too small (minimum size is %1$d x %2$d)</string>
    <string name="photo_upload_something_went_wrong">Oops, something went wrong!</string>
    <string name="camera_permission_description">To take photo, allow YouTube to use Camera and Storage permissions</string>
    <string name="camera_permission_positive_button">Open settings</string>
    <string name="share_copy_url_success">URL copied to clipboard</string>
    <string name="send_video">Share this video via</string>
    <string name="send_playlist">Share this playlist via</string>
    <string name="share_subject">Watch \"%1$s\" on YouTube</string>
    <string name="share_text">%1$s: %2$s</string>
    <string name="accessibility_close_share_panel">Close share panel.</string>
    <string name="preferences_license_title">Open source licenses</string>
    <string name="preferences_license_summary">License details for open source software</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="switch_viewer_prompt">Using a different viewer?</string>
    <string name="switch_viewer_action">Switch</string>
    <string name="place_your_phone_into_cardboard">Place your phone into your Cardboard viewer</string>
    <string name="place_your_viewer_into_viewer_format">Place your phone into your %s viewer</string>
    <string name="viewer_configured_dialog_title">Viewer configured!</string>
    <string name="viewer_configured_message_format">The app is now configured for a %s viewer.</string>
    <string name="got_it">Got it</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="mr_button_content_description">Cast</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_stop">Stop casting</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="pref_subtitles_category">Captions</string>
    <string name="playback_control_previous">Previous</string>
    <string name="playback_control_play_pause">Play/Pause</string>
    <string name="playback_control_replay">Replay</string>
    <string name="playback_control_next">Next</string>
    <string name="playback_control_close">Close</string>
    <string name="accessibility_play">Play video</string>
    <string name="bullet">•</string>
    <string name="accessibility_video_thumbnail">Small video image</string>
    <string name="accessibility_notifications_muted">Notifications muted for this chat</string>
    <string name="accessibility_replies_disabled">Replies disabled</string>
    <string name="pref_general_category">General</string>
    <string name="pref_privacy_category">Privacy</string>
    <string name="pref_about_category">About</string>
    <string name="pref_send_to_tv_category">Connected TVs</string>
    <string name="pref_developer_category">Developer</string>
    <string name="pref_developer_innertube_apiversion_title">InnerTube API version</string>
    <string name="pref_developer_innertube_apiversion_summary">API version %1$s selected</string>
    <string name="pref_developer_apiary_host_title">Apiary backend</string>
    <string name="pref_developer_apiary_host_summary">%1$s selected</string>
    <string name="pref_developer_ppg_host_title">PPG host name and port</string>
    <string name="pref_developer_mdx_host_title">MDX backend</string>
    <string name="pref_developer_mdx_host_summary">%1$s selected</string>
    <string name="pref_developer_mobile_data_plan_api_environment_title">Mobile Dataplan API Backend</string>
    <string name="pref_developer_mobile_data_plan_api_environment_summary">%1$s selected</string>
    <string name="pref_developer_api_request_logging_title">Log API calls</string>
    <string name="pref_developer_api_request_logging_summary">Logs API requests and response summaries to logcat</string>
    <string name="pref_developer_full_api_response_logging_title">Log full API responses</string>
    <string name="pref_developer_full_api_response_logging_summary">Logs full API responses to logcat. This is very verbose</string>
    <string name="pref_developer_online_ads_title">Online ads</string>
    <string name="pref_developer_online_ads_summary">Show online ads preferences for controlling ads requests</string>
    <string name="pref_developer_overridable_network_status_title">Force offline</string>
    <string name="pref_developer_overridable_network_status_summary">Makes network status report that it is offline</string>
    <string name="pref_developer_leak_detector_title">Memory Leak Detection</string>
    <string name="pref_developer_leak_detector_summary">Enable Leaks memory monitor</string>
    <string name="pref_developer_memory_monitor_title">Memory monitor</string>
    <string name="pref_developer_memory_monitor_summary">Show a memory monitor in WatchWhileActivity</string>
    <string name="pref_developer_sc_title">SC Debugging</string>
    <string name="pref_developer_debug_interaction_logging_title">Debug Interaction Logging</string>
    <string name="pref_developer_debug_interaction_logging_summary">Logs Interaction Logging request summaries to logcat</string>
    <string name="pref_developer_bypass_rate_limit_title">Bypass Rate Limit</string>
    <string name="pref_developer_bypass_rate_limit_summary">Turn off the Bottom UI rate limiter</string>
    <string name="accessibility_playlist_show_info">Show playlist information</string>
    <string name="playlist_save">Save playlist</string>
    <string name="accessibility_playlist_share">Share playlist</string>
    <string name="accessibility_playlist_edit">Edit playlist</string>
    <string name="pref_developer_show_offline_http_queue_title">Show offline request queue</string>
    <string name="pref_developer_show_offline_http_queue_summary">Show all requests in the offline queue that will be sent when we return online</string>
    <string name="pref_developer_offline_refresh_title">Offline Refresh</string>
    <string name="pref_developer_offline_refresh_summary">Test offline refresh; view logs</string>
    <string name="pref_developer_offline_playlist_autosync_title">Playlist Autosync</string>
    <string name="pref_developer_offline_playlist_autosync_summary">Test offline playlist auto sync</string>
    <string name="pref_developer_offline_ad_title">Offline Ads &amp; Frequency Cap</string>
    <string name="pref_developer_offline_ad_summary">Show offline ads; edit ad playback counts, expiration, frequency cap</string>
    <string name="mdx_minibar_description">Cast status bar: tap to open queue</string>
    <string name="mdx_minibar_toggle_description">Open queue</string>
</resources>