<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference android:title="@string/pref_developer_apiary_host_title" android:key="ApiaryHostSelection" android:summary="@string/pref_developer_apiary_host_summary" android:defaultValue="0" />
    <EditTextPreference android:title="@string/pref_developer_ppg_host_title" android:key="PPGHost" android:defaultValue="" />
    <ListPreference android:title="@string/pref_developer_innertube_apiversion_title" android:key="InnerTubeApiSelection" android:summary="@string/pref_developer_innertube_apiversion_summary" android:defaultValue="0" />
    <ListPreference android:title="@string/pref_developer_mdx_host_title" android:key="MdxServerSelection" android:summary="@string/pref_developer_mdx_host_summary" android:defaultValue="0" />
    <SwitchPreference android:title="@string/pref_developer_api_request_logging_title" android:key="ApiRequestLogging" android:summary="@string/pref_developer_api_request_logging_summary" android:defaultValue="false" />
    <SwitchPreference android:title="@string/pref_developer_full_api_response_logging_title" android:key="FullApiResponseLogging" android:summary="@string/pref_developer_full_api_response_logging_summary" android:defaultValue="false" />
    <SwitchPreference android:title="@string/pref_developer_debug_interaction_logging_title" android:key="DebugInteractionLogging" android:summary="@string/pref_developer_debug_interaction_logging_summary" android:defaultValue="false" />
    <Preference android:title="@string/pref_developer_online_ads_title" android:key="OnlineAd" android:summary="@string/pref_developer_online_ads_summary" />
    <SwitchPreference android:title="@string/pref_developer_overridable_network_status_title" android:key="overridable_network_status" android:summary="@string/pref_developer_overridable_network_status_summary" android:defaultValue="false" />
    <Preference android:title="@string/pref_developer_show_offline_http_queue_title" android:key="ShowOfflineHttpQueue" android:summary="@string/pref_developer_show_offline_http_queue_summary" />
    <Preference android:title="@string/pref_developer_offline_refresh_title" android:key="OfflineRefresh" android:summary="@string/pref_developer_offline_refresh_summary" />
    <Preference android:title="@string/pref_developer_offline_playlist_autosync_title" android:key="OfflinePlaylistAutoSync" android:summary="@string/pref_developer_offline_playlist_autosync_summary" />
    <Preference android:title="@string/pref_developer_offline_ad_title" android:key="OfflineAd" android:summary="@string/pref_developer_offline_ad_summary" />
    <SwitchPreference android:title="@string/pref_developer_bypass_rate_limit_title" android:key="BypassRateLimit" android:summary="@string/pref_developer_bypass_rate_limit_summary" android:defaultValue="false" />
    <SwitchPreference android:title="@string/pref_developer_leak_detector_title" android:key="leak_detector" android:summary="@string/pref_developer_leak_detector_summary" android:defaultValue="false" />
    <Preference android:title="@string/pref_developer_sc_title" android:key="SC" />
    <CheckBoxPreference android:title="@string/pref_developer_memory_monitor_title" android:key="memory_monitor" android:summary="@string/pref_developer_memory_monitor_summary" android:defaultValue="false" />
    <ListPreference android:title="@string/pref_developer_mobile_data_plan_api_environment_title" android:key="MobileDataPlanApiEnvironment" android:summary="@string/pref_developer_mobile_data_plan_api_environment_summary" android:defaultValue="0" />
</PreferenceScreen>