<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/notification_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/header" android:paddingLeft="10.0dip" android:paddingTop="5.0dip" android:paddingRight="10.0dip" android:paddingBottom="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <FrameLayout android:id="@id/header_seperator" android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/header" android:layout_alignWithParentIfMissing="true" />
    <ImageView android:id="@id/thumbnail" android:layout_width="@dimen/notification_big_icon_width" android:layout_height="@dimen/notification_big_icon_height" android:scaleType="centerCrop" android:layout_below="@id/header_seperator" />
    <ImageView android:id="@id/close" android:background="@color/notification_button_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_cancel" android:layout_below="@id/header_seperator" android:layout_alignParentRight="true" android:contentDescription="@string/playback_control_close" />
    <TextView android:ellipsize="end" android:id="@id/title" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="2" android:layout_toLeftOf="@id/close" android:layout_toRightOf="@id/thumbnail" android:layout_below="@id/header_seperator" style="@style/StatusBarEventContent.Title" />
    <FrameLayout android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_above="@id/playback_controls" android:layout_alignLeft="@id/playback_controls" />
    <LinearLayout android:orientation="horizontal" android:id="@id/playback_controls" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/thumbnail" android:layout_alignBottom="@id/thumbnail">
        <ImageView android:id="@id/previous" android:background="@color/notification_button_background" android:padding="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_notifications_menu_previous_video" android:layout_weight="1.0" android:contentDescription="@string/playback_control_previous" />
        <FrameLayout android:background="#ff333333" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_margin="3.0dip" />
        <ImageView android:id="@id/play_pause" android:background="@color/notification_button_background" android:padding="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_notifications_menu_pause" android:layout_weight="1.0" android:contentDescription="@string/playback_control_play_pause" />
        <ProgressBar android:id="@id/buffering" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
        <ImageView android:id="@id/replay" android:background="@color/notification_button_background" android:padding="14.0dip" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_notifications_menu_replay" android:layout_weight="1.0" android:contentDescription="@string/playback_control_replay" />
        <ImageView android:id="@id/error" android:padding="14.0dip" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_notification_error" android:layout_weight="1.0" />
        <FrameLayout android:background="#ff333333" android:layout_width="1.0dip" android:layout_height="fill_parent" android:layout_margin="3.0dip" />
        <ImageView android:id="@id/next" android:background="@color/notification_button_background" android:padding="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:src="@drawable/ic_notifications_menu_next_video" android:layout_weight="1.0" android:contentDescription="@string/playback_control_next" />
    </LinearLayout>
</RelativeLayout>