<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:yt="http://schemas.android.com/apk/res-auto" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/medium_font_size" android:textStyle="bold" android:textColor="@color/quantum_googblue" android:gravity="center" android:id="@id/last_post_activity_bullet" android:paddingLeft="@dimen/bullet_padding" android:paddingRight="@dimen/bullet_padding" android:layout_width="wrap_content" android:layout_height="@dimen/conversation_switcher_icon_size" android:minWidth="16.0dip" android:text="@string/bullet" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
        <FrameLayout android:id="@id/conversation_icon" android:layout_width="@dimen/conversation_switcher_icon_size" android:layout_height="@dimen/conversation_switcher_icon_size" android:layout_marginRight="16.0dip" android:layout_toRightOf="@id/last_post_activity_bullet" android:layout_alignWithParentIfMissing="true">
            <ImageView android:id="@id/replies_disabled" android:background="@drawable/grey_circle" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/quantum_ic_link_black_24" android:scaleType="center" android:contentDescription="@string/accessibility_replies_disabled" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:minHeight="@dimen/conversation_switcher_item_height" android:layout_toLeftOf="@id/video_thumbnail_frame" android:layout_toRightOf="@id/conversation_icon">
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/conversation_primary_text_size" android:textColor="@color/primary_font" android:ellipsize="end" android:id="@id/conversation_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
            <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/conversation_tertiary_text_size" android:textColor="@color/conversation_tertiary_text_color" android:ellipsize="end" android:id="@id/last_post_activity" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="1" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
            <Space android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
            <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center_vertical" android:id="@id/notifications_muted" android:layout_width="14.0dip" android:layout_height="14.0dip" android:layout_marginRight="2.0dip" android:src="@drawable/quantum_ic_notifications_off_grey600_18" android:scaleType="centerInside" android:contentDescription="@string/accessibility_notifications_muted" />
                <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textSize="@dimen/conversation_tertiary_text_size" android:textColor="@color/conversation_tertiary_text_color" android:layout_gravity="center_vertical" android:id="@id/last_post_timestamp" android:layout_width="wrap_content" android:layout_height="wrap_content" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
            </LinearLayout>
        </LinearLayout>
        <com.google.android.libraries.youtube.common.ui.FixedAspectRatioRelativeLayout android:id="@id/video_thumbnail_frame" android:layout_width="wrap_content" android:layout_height="@dimen/conversation_switcher_item_height" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_alignParentRight="true" res-auto:aspectRatio="@fraction/conversation_aspect_ratio_16_9" xmlns:res-auto="http://schemas.android.com/apk/res-auto">
            <ImageView android:id="@id/video_thumbnail" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/accessibility_video_thumbnail" />
        </com.google.android.libraries.youtube.common.ui.FixedAspectRatioRelativeLayout>
        <include android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/conversation_switcher_item_menu" />
    </RelativeLayout>
    <View android:layout_gravity="bottom" android:background="@drawable/list_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
</FrameLayout>