<?xml version="1.0" encoding="utf-8"?>
<GridLayout android:id="@id/mdx_minibar" android:background="?backgroundPrimaryInverse" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/mdx_minibar_description" android:rowCount="3" android:columnCount="3" _xmlns:android="http://schemas.android.com/apk/res/android" _xmlns:yt="http://schemas.android.com/apk/res-auto" xmlns:_xmlns="xmlns"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_vertical" android:id="@id/minibar_toggle" android:layout_width="48.0dip" android:layout_height="48.0dip" android:src="@drawable/quantum_ic_keyboard_arrow_up_white_24" android:scaleType="center" android:layout_column="0" android:contentDescription="@string/mdx_minibar_toggle_description" android:layout_row="0" android:layout_rowSpan="2" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?textAppearanceSubheadInverse" android:textColor="?android:textColorPrimaryInverse" android:ellipsize="end" android:gravity="bottom" android:layout_gravity="fill" android:id="@id/minibar_title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:minHeight="28.0dip" android:layout_column="1" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:layout_row="0" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <com.google.android.libraries.youtube.common.ui.YouTubeTextView android:textAppearance="?textAppearanceBody1Inverse" android:textColor="?android:textColorSecondaryInverse" android:ellipsize="end" android:gravity="top" android:layout_gravity="fill" android:id="@id/minibar_queue_status" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:minHeight="28.0dip" android:layout_column="1" android:maxLines="1" android:singleLine="@bool/rtl_single_line_true" android:layout_row="1" res-auto:robotoFont="regular" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
    <ImageView android:layout_gravity="fill_vertical" android:background="?backgroundTertiaryInverse" android:layout_width="100.0dip" android:layout_height="wrap_content" android:src="@drawable/quantum_ic_cast_black_24" android:scaleType="center" android:minHeight="56.0dip" android:layout_column="2" android:contentDescription="@null" android:layout_row="0" android:layout_rowSpan="2" />
    <com.google.android.libraries.youtube.player.overlay.DefaultThumbnailOverlay android:layout_gravity="fill_vertical" android:id="@id/thumbnail" android:background="?backgroundTertiaryInverse" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="56.0dip" android:scaleType="centerCrop" android:minHeight="56.0dip" android:layout_column="2" android:contentDescription="@null" android:layout_row="0" android:layout_rowSpan="2" />
    <ProgressBar android:layout_gravity="center" android:id="@id/progress_spinner" android:layout_width="24.0dip" android:layout_height="24.0dip" android:indeterminate="true" android:layout_column="2" android:layout_row="0" android:layout_rowSpan="2" />
    <com.google.android.libraries.youtube.common.ui.TouchImageView android:layout_gravity="fill_vertical" android:id="@id/play_pause" android:layout_width="100.0dip" android:layout_height="wrap_content" android:src="@drawable/player_play" android:scaleType="center" android:minHeight="56.0dip" android:layout_column="2" android:contentDescription="@string/accessibility_play" android:layout_row="0" android:layout_rowSpan="2" style="@style/PlayerButton" />
    <com.google.android.libraries.youtube.player.overlay.TimeBar android:id="@id/mdx_minibar_time_bar" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_column="0" android:layout_row="2" android:layout_columnSpan="3" res-auto:scrubberPadding="0.0dip" res-auto:textMargin="0.0dip" xmlns:res-auto="http://schemas.android.com/apk/res-auto" />
</GridLayout>